[gd_scene load_steps=9 format=3 uid="uid://hnneefu01x8k"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_hrpts"]
[ext_resource type="AudioStream" uid="uid://ddn4hxn6uccxl" path="res://sounds/startgame.ogg" id="2_yb0wj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku41w"]
bg_color = Color(0.47278, 0.738181, 0.886386, 1)
border_width_bottom = 8
border_color = Color(0.1926, 0.196307, 0.394474, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.358236, 0.507308, 0.772532, 0.6)
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4u0j1"]
bg_color = Color(0.346801, 0.638742, 0.795815, 1)
border_width_bottom = 8
border_color = Color(0.1926, 0.196307, 0.394474, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.0329041, 0.11847, 0.159599, 0.6)
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70474"]
bg_color = Color(0.263628, 0.536049, 0.679728, 1)
border_width_bottom = 8
border_color = Color(0.1926, 0.196307, 0.394474, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.0329041, 0.11847, 0.159599, 0.6)
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2x03"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s05cw"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="Theme" id="Theme_mffac"]
Button/styles/hover = SubResource("StyleBoxFlat_ku41w")
Button/styles/normal = SubResource("StyleBoxFlat_4u0j1")
Button/styles/pressed = SubResource("StyleBoxFlat_70474")
Label/colors/font_color = Color(0.608352, 0.661979, 0.918247, 1)
Label/colors/font_outline_color = Color(0.273089, 0.257048, 0.420039, 1)
Label/colors/font_shadow_color = Color(0.102865, 0.167773, 0.304003, 0)
Label/constants/outline_size = 8
Label/styles/normal = SubResource("StyleBoxFlat_o2x03")
Panel/styles/panel = SubResource("StyleBoxFlat_s05cw")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrpts")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_left = 648.0
offset_right = 1152.0
offset_bottom = 648.0
theme = SubResource("Theme_mffac")

[node name="PlayWithFriend" type="Button" parent="Background"]
layout_mode = 0
offset_left = 120.0
offset_top = 104.0
offset_right = 376.0
offset_bottom = 144.0
focus_mode = 0
text = "Graj (2 Graczy)"

[node name="PlayWithAI" type="Button" parent="Background"]
layout_mode = 0
offset_left = 120.0
offset_top = 160.0
offset_right = 376.0
offset_bottom = 200.0
focus_mode = 0
text = "Graj (Gracz VS SI)"

[node name="Authors" type="Label" parent="Background"]
layout_mode = 0
offset_top = 616.0
offset_right = 502.0
offset_bottom = 645.0
theme_override_colors/font_color = Color(0.103743, 0.0910705, 0.141191, 1)
theme_override_colors/font_outline_color = Color(0.37594, 0.473333, 0.575807, 1)
theme_override_font_sizes/font_size = 9
text = "2024
Autorami są Kacper Muszyński i Wiktoria Zaborowska"
horizontal_alignment = 1
vertical_alignment = 2

[node name="StatusLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 38
text = "Godot Checkers"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Board" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 648.0
offset_bottom = 648.0
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="BoardGrid" type="GridContainer" parent="Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -324.0
offset_right = 324.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yb0wj")

[connection signal="pressed" from="Background/PlayWithFriend" to="." method="_play_button_pressed"]
[connection signal="pressed" from="Background/PlayWithAI" to="." method="_play_ai_button_pressed"]
